--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ label.hamburger /*Bouton Hamburger */
     padding-left: 2em;
     padding-right: 2em;
     height: 100vh;
-    text-align: justify;
+    text-align: left;
     justify-content: space-around;
     background: rgb(20,184,166);
     background: linear-gradient(340deg, rgba(20,184,166,0.5) 0%, rgba(255,255,255,1) 60%);
@@ -245,8 +245,12 @@ label.hamburger /*Bouton Hamburger */
 }
 
 .heading_text-heading h1{
-    font-size: 3em;
+    font-size: 2em;
     padding-bottom: .3em;
+}
+
+.heading_text-heading p{
+    text-align: justify;
 }
 
 .heading_text-heading strong{
@@ -257,7 +261,7 @@ label.hamburger /*Bouton Hamburger */
     border-radius: 1em;
 }
 
-
+/* -------------------------------------- */
 /* MEDIA QUERIES - TABLETTE */
 
 
@@ -367,5 +371,13 @@ label.hamburger /*Bouton Hamburger */
         display: inline-block;
         transition: .4s ease-out;
     } 
+    
+
+
+    /* Heading */
+
+    .heading{
+       flex-direction: row; 
+    }
     
 }
