--- a/style.css
+++ b/style.css
@@ -229,12 +229,13 @@ label.hamburger /*Bouton Hamburger */
 .heading{
     display: flex;
     flex-direction: column;
-    padding-top: 5em;
+    padding-top: 8em;
     padding-left: 2em;
     padding-right: 2em;
     height: 90vh;
+    width: 100vw;
     text-align: left;
-    justify-content: space-around;
+    justify-content: flex-start;
     background: rgb(20,184,166);
     background: linear-gradient(340deg, rgba(20,184,166,0.5) 0%, rgba(255,255,255,1) 60%);
 }
@@ -263,7 +264,12 @@ label.hamburger /*Bouton Hamburger */
 }
 
 .heading>img{
-    border-radius: 1em;
+    max-height: 25em;
+    position: absolute;
+    bottom: -1em;
+    overflow: hidden;
+    transform: rotate(10deg);
+
 }
 
 /* ---------------------------------------------------------------------------------------------------------------- */
