--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ label.hamburger /*Bouton Hamburger */
 .heading{
     display: flex;
     flex-direction: column;
-    padding-top: 3em;
+    padding-top: 6em;
     height: 90vh;
     width: 100vw;
     background: rgb(20,184,166);
@@ -228,6 +228,10 @@ label.hamburger /*Bouton Hamburger */
         font-size: 3em;
     }
 
+    .heading_text-heading p{
+        font-size: 1.1em;
+    }
+
     .heading .heading_img img{
         max-height: 40em;
         position: relative;
@@ -238,10 +242,20 @@ label.hamburger /*Bouton Hamburger */
 /* MEDIA QUERIES - TABLETTE XL / LAPTOP */
 
 @media screen and (min-width: 768px) {
+    
+    .heading_text-heading h1{
+        font-size: 3.5em;
+    }
+
+    .heading_text-heading p{
+        font-size: 1.5em;
+    }
+
     .heading .heading_img img{
-        max-height: 50em;
+        max-height: 40em;
         position: relative;
-        bottom: 5em;
+        bottom: 8em;
+        right: -10em;
     }
 }
 
@@ -355,23 +369,21 @@ label.hamburger /*Bouton Hamburger */
        flex-direction: row;
        align-items:center;
        height: 100vh; 
+       padding-top: 10em;
     }
 
     .heading_text-heading{
         flex: 1;
-        font-size: 1.5em;
-        padding-right: 0;
+        font-size: 1.1em;
     }
 
     .heading_img{
-        flex: 2;
-        height: 80vh;
+        flex: 1;
+        height: 50vh;
     }
 
     .heading_img img{
-        max-width: 90vw;
+        max-width: 100vw;
+        margin-left: -10em;
     }
-    
-
-
 }
