--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a{
 /*  */
 
 
-/* Header */
+/* ----------------------------------------- Header-----------------------------------------  */
 
 header {
     background: #022B3A;
@@ -173,7 +173,7 @@ label.hamburger /*Bouton Hamburger */
         display: none;
     }
 
-/* Heading */
+/* ----------------------------------------- Heading-----------------------------------------  */
 
 .heading{
     display: flex;
@@ -222,7 +222,7 @@ label.hamburger /*Bouton Hamburger */
 }
 
 
-/* Destinations */
+/* ----------------------------------------- Destinations----------------------------------------- */
 .destinations {
     display: flex;
     flex-direction: column;
@@ -249,8 +249,6 @@ label.hamburger /*Bouton Hamburger */
     flex-direction: column;
     width: 80vw;
     margin-bottom: 2em;
-    background: #dfe4e3;
-    border-radius: 1em;
 }
 
 .card>img {
@@ -269,7 +267,13 @@ label.hamburger /*Bouton Hamburger */
 
 .card-description{
     text-align: justify;
+    background:#e6f5f2;
     font-size: 0.9em;
+    border-radius: 0 0 1em 1em;
+}
+
+.card {
+    width: 80vw;
 }
 
 /* ---------------------------------------------------------------------------------------------------------------- */
@@ -289,12 +293,28 @@ label.hamburger /*Bouton Hamburger */
         position: relative;
         bottom: 5em;
     }
+
+    .card-destinations {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: flex-start;
+    }
+
+    .card {
+        width: 40vw;
+    }
+
 }
 
 /* MEDIA QUERIES - TABLETTE XL / LAPTOP */
 
 @media screen and (min-width: 768px) {
     
+    .heading{
+        height: 100vh;
+    }
+
     .heading_text-heading h1{
         font-size: 3.5em;
     }
@@ -316,7 +336,7 @@ label.hamburger /*Bouton Hamburger */
 @media screen and (min-width: 920px) {
 
 
-    /* Header */
+    /*----------------------------------------- Header -----------------------------------------*/
     
     header{
       height: 6rem;
@@ -341,7 +361,7 @@ label.hamburger /*Bouton Hamburger */
     }
     
 
-    /* Menu */
+    /*----------------------------------------- Menu -----------------------------------------*/
  
     label.hamburger {
         display: none;
@@ -385,7 +405,7 @@ label.hamburger /*Bouton Hamburger */
     
     
     /*  */
-    /* CONNEXION */
+    /*----------------------------------------- CONNEXION -----------------------------------------*/
     /*  */
     
     .menu_menu-connexion a{
@@ -415,13 +435,13 @@ label.hamburger /*Bouton Hamburger */
         transition: .4s ease-out;
     } 
     
-    /* Heading */
+    /*----------------------------------------- Heading -----------------------------------------*/
 
     .heading{
        flex-direction: row;
        align-items:center;
        height: 100vh; 
-       padding-top: 10em;
+       padding-top: 10em
     }
 
     .heading_text-heading{
@@ -438,4 +458,18 @@ label.hamburger /*Bouton Hamburger */
         max-width: 100vw;
         margin-left: -10em;
     }
+
+   /*----------------------------------------- Destinations -----------------------------------------*/
+
+
+   .card-destinations {
+    justify-content: space-around;
+    width: 95vw;
+ 
+}
+   
+   .card {
+        width: 20vw;
+    }
+
 }
