Ajout du fichier social dans les assets, avec les SVG reseaux sociaux

--- a/style.css
+++ b/style.css
@@ -222,6 +222,24 @@ label.hamburger /*Bouton Hamburger */
     width: 80vw;
 }
 
+
+/* ----------------------------------------- Flotte----------------------------------------- */
+
+/* ----------------------------------------- Experiences----------------------------------------- */
+
+/* ----------------------------------------- Footer----------------------------------------- */
+
+footer {
+    width: 100vw;
+    background: #14B8A6;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 /* ---------------------------------------------------------------------------------------------------------------- */
 /* MEDIA QUERIES - TABLETTE */
 @media screen and (min-width: 575px) {
