Ajout de la section HTML Flotte

--- a/style.css
+++ b/style.css
@@ -228,6 +228,11 @@ label.hamburger /*Bouton Hamburger */
 
 /* ----------------------------------------- Flotte----------------------------------------- */
 
+.flotte {
+    height: 100vh;
+    background: #022B3A;
+}
+
 /* ----------------------------------------- Experiences----------------------------------------- */
 
 /* ----------------------------------------- Footer----------------------------------------- */
